--- a/README
+++ b/README
@@ -3,7 +3,13 @@
 -------------------------------------------------
 
 
+# religion
+https://en.wikipedia.org/wiki/Religion
+
 # involuntary euthanasia
 https://en.wikipedia.org/wiki/Involuntary_euthanasia
+
+# netherlands
+https://en.wikipedia.org/wiki/Netherlands
 
 bemoeigurus at work © 2002-2021
