--- a/README
+++ b/README
@@ -1,6 +1,6 @@
--------------------------------------------------
-| het-nederlandse-geloof-involuntary-euthanasia |
--------------------------------------------------
+----------------------
+| the dutch religion |
+----------------------
 
 
 # religion
